--- a/src/Services/Inventory/Inventory.API/Inventory.API.csproj
+++ b/src/Services/Inventory/Inventory.API/Inventory.API.csproj
@@ -10,6 +10,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="MassTransit.RabbitMQ" Version="8.5.7" />
+		<PackageReference Include="MediatR" Version="13.1.0" />
 		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="10.0.1">
 			<PrivateAssets>all</PrivateAssets>
@@ -26,6 +27,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\..\..\BuildingBlocks\BuildingBlocks.Core\BuildingBlocks.Core.csproj" />
 	  <ProjectReference Include="..\..\..\BuildingBlocks\BuildingBlocks.Logging\BuildingBlocks.Logging.csproj" />
 	  <ProjectReference Include="..\Inventory.Application\Inventory.Application.csproj" />
 	  <ProjectReference Include="..\Inventory.Infrastructure\Inventory.Infrastructure.csproj" />
