Add Payment microservice with full integration & docs
- Introduced Payment.API, Application, Domain, Infrastructure projects
- Integrated Payment service into Docker Compose and solution
- Implemented domain-driven Payment entity, enums, constants
- Added CQRS handlers, MassTransit consumer for Order Saga
- Provided EF Core context, repository, and mock gateway
- Exposed Payment API endpoints, health checks, tracing, logging
- Updated .env, compose, and appsettings for Payment service
- Secured endpoints with [Authorize], admin role for product ops
- Refactored Catalog domain for encapsulation and business rules
- Added detailed README.md covering architecture and usage

--- a/.env.example
+++ b/.env.example
@@ -41,6 +41,10 @@ BASKET_API_PORT=5002
 ORDER_API_PORT=5003
 INVENTORY_API_PORT=5004
 IDENTITY_API_PORT=5005
+PAYMENT_API_PORT=5006
 
 # CORS Origins (comma separated)
 CORS_ORIGINS=http://localhost:3000,http://localhost:4200
+
+# Payment Database
+CONNECTION_STRING_PAYMENT=Host=postgres;Port=5432;Database=MicroECommerce_PaymentDb;Username=postgres;Password=postgres
