--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     volumes:
       - postgres-data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d postgres"]
+      test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d postgres" ]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -32,18 +32,7 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     command: >
-      sh -c "
-      echo 'Postgres başlatılıyor, bekleniyor...';
-      export PGPASSWORD='${POSTGRES_PASSWORD}';
-      until pg_isready -h postgres -U ${POSTGRES_USER} -d postgres; do echo waiting for postgres; sleep 2; done;
-      echo 'Veritabanları oluşturuluyor...';
-      psql -h postgres -U ${POSTGRES_USER} -d postgres -c 'CREATE DATABASE \"MicroECommerce_IdentityDb\"' || true;
-      psql -h postgres -U ${POSTGRES_USER} -d postgres -c 'CREATE DATABASE \"MicroECommerce_CatalogDb\"' || true;
-      psql -h postgres -U ${POSTGRES_USER} -d postgres -c 'CREATE DATABASE \"MicroECommerce_OrderDb\"' || true;
-      psql -h postgres -U ${POSTGRES_USER} -d postgres -c 'CREATE DATABASE \"MicroECommerce_InventoryDb\"' || true;
-      psql -h postgres -U ${POSTGRES_USER} -d postgres -c 'CREATE DATABASE \"MicroECommerce_NotificationDb\"' || true;
-      echo 'Tüm veritabanları hazır!';
-      "
+      sh -c " echo 'Postgres başlatılıyor, bekleniyor...'; export PGPASSWORD='${POSTGRES_PASSWORD}'; until pg_isready -h postgres -U ${POSTGRES_USER} -d postgres; do echo waiting for postgres; sleep 2; done; echo 'Veritabanları oluşturuluyor...'; psql -h postgres -U ${POSTGRES_USER} -d postgres -c 'CREATE DATABASE \"MicroECommerce_IdentityDb\"' || true; psql -h postgres -U ${POSTGRES_USER} -d postgres -c 'CREATE DATABASE \"MicroECommerce_CatalogDb\"' || true; psql -h postgres -U ${POSTGRES_USER} -d postgres -c 'CREATE DATABASE \"MicroECommerce_OrderDb\"' || true; psql -h postgres -U ${POSTGRES_USER} -d postgres -c 'CREATE DATABASE \"MicroECommerce_InventoryDb\"' || true; psql -h postgres -U ${POSTGRES_USER} -d postgres -c 'CREATE DATABASE \"MicroECommerce_NotificationDb\"' || true; psql -h postgres -U ${POSTGRES_USER} -d postgres -c 'CREATE DATABASE \"MicroECommerce_PaymentDb\"' || true; echo 'Tüm veritabanları hazır!'; "
     networks:
       - microecommerce-network
 
@@ -57,7 +46,7 @@ services:
     volumes:
       - basketdb_data:/data
     healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
+      test: [ "CMD", "redis-cli", "ping" ]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -76,8 +65,8 @@ services:
       - "${RABBITMQ_UI_PORT}:15672"
     volumes:
       - rabbitmq_data:/var/lib/rabbitmq
-    healthcheck: 
-      test: ["CMD", "rabbitmq-diagnostics", "-q", "ping"]
+    healthcheck:
+      test: [ "CMD", "rabbitmq-diagnostics", "-q", "ping" ]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -107,9 +96,9 @@ services:
     environment:
       - COLLECTOR_OTLP_ENABLED=true
     ports:
-      - "16686:16686"  # Jaeger UI
-      - "4317:4317"    # OTLP gRPC receiver
-      - "4318:4318"    # OTLP HTTP receiver
+      - "16686:16686" # Jaeger UI
+      - "4317:4317" # OTLP gRPC receiver
+      - "4318:4318" # OTLP HTTP receiver
     networks:
       - microecommerce-network
     restart: unless-stopped
@@ -122,7 +111,7 @@ services:
     build:
       context: .
       dockerfile: src/Services/Catalog/Catalog.API/Dockerfile
-    restart: on-failure 
+    restart: on-failure
     environment:
       - ASPNETCORE_ENVIRONMENT=${ASPNETCORE_ENVIRONMENT}
       - ASPNETCORE_URLS=http://+:80
@@ -140,7 +129,7 @@ services:
       postgres-init:
         condition: service_completed_successfully
       rabbitmq:
-        condition: service_healthy 
+        condition: service_healthy
       seq:
         condition: service_started
       jaeger:
@@ -154,7 +143,7 @@ services:
     build:
       context: .
       dockerfile: src/Services/Identity/Identity.API/Dockerfile
-    restart: on-failure 
+    restart: on-failure
     environment:
       - ASPNETCORE_ENVIRONMENT=${ASPNETCORE_ENVIRONMENT}
       - ASPNETCORE_URLS=http://+:80
@@ -182,7 +171,7 @@ services:
       postgres-init:
         condition: service_completed_successfully
       rabbitmq:
-        condition: service_healthy 
+        condition: service_healthy
       seq:
         condition: service_started
       jaeger:
@@ -196,7 +185,7 @@ services:
     build:
       context: .
       dockerfile: src/Services/Inventory/Inventory.API/Dockerfile
-    restart: on-failure 
+    restart: on-failure
     environment:
       - ASPNETCORE_ENVIRONMENT=${ASPNETCORE_ENVIRONMENT}
       - ASPNETCORE_URLS=http://+:80
@@ -214,7 +203,7 @@ services:
       postgres-init:
         condition: service_completed_successfully
       rabbitmq:
-        condition: service_healthy 
+        condition: service_healthy
       seq:
         condition: service_started
       jaeger:
@@ -228,7 +217,7 @@ services:
     build:
       context: .
       dockerfile: src/Services/Notification/Notification.API/Dockerfile
-    restart: on-failure 
+    restart: on-failure
     environment:
       - ASPNETCORE_ENVIRONMENT=${ASPNETCORE_ENVIRONMENT}
       - ASPNETCORE_URLS=http://+:80
@@ -251,7 +240,39 @@ services:
       postgres-init:
         condition: service_completed_successfully
       rabbitmq:
-        condition: service_healthy 
+        condition: service_healthy
+      seq:
+        condition: service_started
+      jaeger:
+        condition: service_started
+    networks:
+      - microecommerce-network
+
+  payment-api:
+    image: ${DOCKER_REGISTRY-}payment-api
+    container_name: payment-api
+    build:
+      context: .
+      dockerfile: src/Services/Payment/Payment.API/Dockerfile
+    restart: on-failure
+    environment:
+      - ASPNETCORE_ENVIRONMENT=${ASPNETCORE_ENVIRONMENT}
+      - ASPNETCORE_URLS=http://+:80
+      - ConnectionStrings__PaymentConnectionString=${CONNECTION_STRING_PAYMENT}
+      - RabbitMQ__Host=${RABBITMQ_HOST}
+      - RabbitMQ__UserName=${RABBITMQ_USER}
+      - RabbitMQ__Password=${RABBITMQ_PASSWORD}
+      - Serilog__WriteTo__1__Args__serverUrl=${SEQ_URL}
+      - OTEL_EXPORTER_OTLP_ENDPOINT=http://jaeger:4317
+    ports:
+      - "${PAYMENT_API_PORT}:80"
+    depends_on:
+      postgres:
+        condition: service_healthy
+      postgres-init:
+        condition: service_completed_successfully
+      rabbitmq:
+        condition: service_healthy
       seq:
         condition: service_started
       jaeger:
@@ -265,7 +286,7 @@ services:
     build:
       context: .
       dockerfile: src/Services/Order/Order.API/Dockerfile
-    restart: on-failure 
+    restart: on-failure
     environment:
       - ASPNETCORE_ENVIRONMENT=${ASPNETCORE_ENVIRONMENT}
       - ASPNETCORE_URLS=http://+:80
@@ -283,7 +304,7 @@ services:
       postgres-init:
         condition: service_completed_successfully
       rabbitmq:
-        condition: service_healthy 
+        condition: service_healthy
       seq:
         condition: service_started
       jaeger:
@@ -297,7 +318,7 @@ services:
     build:
       context: .
       dockerfile: src/Services/Basket/Basket.API/Dockerfile
-    restart: on-failure 
+    restart: on-failure
     environment:
       - ASPNETCORE_ENVIRONMENT=${ASPNETCORE_ENVIRONMENT}
       - ASPNETCORE_URLS=http://+:80
@@ -313,7 +334,7 @@ services:
       basketdb:
         condition: service_healthy
       rabbitmq:
-        condition: service_healthy 
+        condition: service_healthy
       seq:
         condition: service_started
       jaeger:
@@ -327,7 +348,7 @@ services:
     build:
       context: .
       dockerfile: src/ApiGateway/ApiGateway/Dockerfile
-    restart: on-failure 
+    restart: on-failure
     environment:
       - ASPNETCORE_ENVIRONMENT=${ASPNETCORE_ENVIRONMENT}
       - ASPNETCORE_URLS=http://+:80
